Basic code structure

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <script src="engine.js"></script>
 </head>
 <body>
-
+<button onclick="run(getHelloWorldTest())">Hello World Test</button>
 </body>
 </html>
