Added unit tests.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
     <title></title>
     <script src="engine.js"></script>
+    <script src="unitTests.js"></script>
 </head>
 <body>
-<button onclick="run(getHelloWorldTest())">Hello World Test</button>
 </body>
 </html>
