Changed border-thickness to border-width.

--- a/ui_prototype.html
+++ b/ui_prototype.html
@@ -336,7 +336,7 @@ function allowDrop(ev)
     .numberField{
         background-color:white;
         border:inset;
-        border-thickness:1px;
+        border-width:1px;
         border-radius:6px;
         padding-top:1px;
         padding-bottom:1px;
