changed to line breaks between events on sample.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             };
         runProgram(compile(code));
         function screenWrite(value) {
-            document.body.appendChild(merge(document.createElement('span'),
+            document.body.appendChild(merge(document.createElement('div'),
                 {
                     innerHTML: value
                 }));
