Made number boxes of type number.

--- a/ui_prototype.html
+++ b/ui_prototype.html
@@ -215,7 +215,7 @@ function representScratchNode(scratchNode)
 		case "literal":
 		    newNode = merge(document.createElement("INPUT"),
 		        {
-		            type: 'text',
+		            type: 'number',
 		            className: 'numberField',
 		            value: scratchNode.literal,
 		            size: 3,
