Added ask and answer.

--- a/ui_prototype.html
+++ b/ui_prototype.html
@@ -183,6 +183,23 @@
                         literal: ""
                     }
                 ]
+            },
+            {
+                type: "native",
+                native: ask,
+                text: ["ask ", " and wait"],
+                args: [
+                    {
+                        type: "literal",
+                        literal: "What's your name?"
+                    }
+                ]
+            },
+            {
+                type: "native",
+                native: getAnswer,
+                args: [],
+                text: "answer"
             }]
         };
 
