--- a/ui_prototype.html
+++ b/ui_prototype.html
@@ -202,12 +202,20 @@
                 text: "answer"
             }]
         };
+		
+		var localscope = [
+			{name:"length", type:"int", value:15}
+		];
 
-        function addParents(tree) {
-            function addParentsRec(current, parent) {
+        function addParents(tree)
+		{
+            function addParentsRec(current, parent)
+			{
                 current.parent = parent;
-                if (current.args !== undefined) {
-                    for (var Idx = 0; Idx < current.args.length; ++Idx) {
+                if (current.args !== undefined)
+				{
+                    for (var Idx = 0; Idx < current.args.length; ++Idx)
+					{
                         addParentsRec(current.args[Idx], current);
                     }
                 }
@@ -216,8 +224,10 @@
             addParentsRec(tree, undefined);
         }
 
-        function onclick_tableId(cell) {
-            if (selectedTable != undefined) {
+        function onclick_tableId(cell)
+		{
+            if (selectedTable != undefined)
+			{
                 // restore default settings
                 selectedTable.className = "sctable";
                 selectedTable.draggable = false;
@@ -236,8 +246,10 @@
                 });
 
             var headerElement = selectedTable.firstChild.firstChild;
-            while (headerElement !== null) {
-                if (headerElement.nodeName === "TD") {
+            while (headerElement !== null)
+			{
+                if (headerElement.nodeName === "TD")
+				{
                     headerElement.draggable = false;
                 }
                 headerElement = headerElement.nextSibling;
@@ -261,7 +273,8 @@
             }* /
         });*/
 
-        function onload_init() {
+        function onload_init()
+		{
             var scratchArea = document.getElementById("scratch_area");
             displayWholePage(testDoc, scratchArea);
             scratchArea.ondrop = placeDrop;
@@ -271,27 +284,45 @@
             displayWholePage(paletteEntries, paletteArea);
             paletteArea.ondrop = deleteDrop;
             paletteArea.ondragover = allowDrop;
+			
+			var dataArea = document.getElementById("data_area");
+			displayData(localscope, dataArea);
         }
 
-        function displayWholePage(node, rootElement) {
+        function displayWholePage(node, rootElement)
+		{
             addParents(node);
 
             removeAllChildren(rootElement);
             rootElement.appendChild(representScratchNode(node));
         }
+		
+		function displayData(scope, rootElement)
+		{
+			removeAllChildren(rootElement);
+			for(var Idx = 0; Idx < scope.length; ++Idx)
+			{
+				rootElement.appendChild(representScopeEntry(scope[Idx]));
+			}
+		}
 
-        function removeAllChildren(element) {
-            while (element.firstChild !== null) {
+        function removeAllChildren(element)
+		{
+            while (element.firstChild !== null)
+			{
                 element.removeChild(element.firstChild);
             }
         }
 
-        function representScratchNode(scratchNode) {
+        function representScratchNode(scratchNode)
+		{
             var newNode;
-            switch (scratchNode.type) {
+            switch (scratchNode.type)
+			{
                 case "document":
                     newNode = document.createElement("DIV");
-                    for (var Idx = 0; Idx < scratchNode.args.length; ++Idx) {
+                    for (var Idx = 0; Idx < scratchNode.args.length; ++Idx)
+					{
                         var containerDiv = document.createElement("DIV");
                         containerDiv.appendChild(representScratchNode(scratchNode.args[Idx]));
                         newNode.appendChild(containerDiv);
@@ -309,7 +340,7 @@
 					if(scratchNode.args.length === 0)
 					{
 						newNode.appendChild( document.createTextNode(scratchNode.text) );
-						newNode.className = "nativeLeaf";
+						newNode.className = (scratchNode.scopeEntry !== undefined)?"scopeNode":"nativeLeaf";
 					}
 					else
 					{
@@ -348,24 +379,68 @@
             newNode.scratchNode = scratchNode;
             return newNode;
         }
+		
+		function representScopeEntry(scopeEntry)
+		{
+			var newNode = merge(document.createElement("DIV"),
+				{
+					className: "scopeEntry",
+					draggable: true,
+					ondragstart: drag,
+					scopeEntry: scopeEntry,
+					scratchNode: {
+						type: "native",
+						scopeEntry: scopeEntry,
+						text: scopeEntry.name,
+						args:[],
+						"native": function(scopeEntry){ return function(){ return scopeEntry.value; }}(scopeEntry),
+					}
+				});
+
+			newNode.appendChild( document.createTextNode(scopeEntry.name) );
+				
+			var textBox = merge(document.createElement("INPUT"),
+				{
+					type: 'text',
+					className: 'numberField',
+					value: scopeEntry.value,
+					scopeEntry: scopeEntry,
+					size: 3,
+					onchange: function () {
+						var $t;
+						this.scopeEntry.value = (($t = parseInt(this.value)) ? $t : this.value);
+						this.size = this.value.length > 6 ? 20 : 3;
+					},
+					onkeyup: function () {
+						this.size = this.value.length > 6 ? 20 : 3;
+					}
+				});
+
+			newNode.appendChild(textBox);
+			return newNode;
+		}
 
         var g_draggingElement;
 
-        function drag(ev) {
+        function drag(ev)
+		{
             g_draggingElement = ev.target;
         }
 
-        function getRoot(node) {
+        function getRoot(node)
+		{
             while (node.parent !== undefined)
                 node = node.parent;
 
             return node;
         }
 
-        function cloneNode(node) {
+        function cloneNode(node)
+		{
             checkTypes([node], ['object']);
             var result = {};
-            for (var key in node) {
+            for (var key in node)
+			{
                 if (key === "parent")
                     continue;
                 var value = node[key];
@@ -377,20 +452,28 @@
             return result;
         }
 
-        function placeDrop(ev) {
-            if (g_draggingElement !== undefined && g_draggingElement.scratchNode !== undefined) {
+        function placeDrop(ev)
+		{
+            if (g_draggingElement === undefined)
+				return;
+
+			if(g_draggingElement.scratchNode !== undefined)
+			{
                 var draggingNode = g_draggingElement.scratchNode;
                 var targetNode = ev.target.scratchNode;
                 var draggingRoot = getRoot(draggingNode);
 
-                if (draggingRoot === paletteEntries) {
+                if (draggingRoot === paletteEntries)
+				{
                     // dragged a palette entry, clone it
                     draggingNode = cloneNode(draggingNode);
                 }
 
-                if (targetNode === undefined) {
+                if (targetNode === undefined)
+				{
                     // dragged a node into nowhere, add it to the root doc
-                    if (draggingNode.parent !== testDoc) {
+                    if (draggingNode.parent !== testDoc)
+					{
                         dragAwayNode(draggingNode);
 
                         testDoc.args.push(draggingNode);
@@ -398,7 +481,8 @@
                         displayWholePage(testDoc, scratchArea); // redisplay
                     }
                 }
-                else if (targetNode.parent !== undefined && !isAncestorOfNode(draggingNode, targetNode)) {
+                else if (targetNode.parent !== undefined && !isAncestorOfNode(draggingNode, targetNode))
+				{
                     dragAwayNode(draggingNode);
 
                     var targetArgIdx = getParentArgIndex(targetNode);
@@ -406,7 +490,8 @@
                     var replacedNode = targetNode.parent.args[targetArgIdx];
                     targetNode.parent.args[targetArgIdx] = draggingNode;
 
-                    if (replacedNode !== undefined && replacedNode.type !== "literal") {
+                    if (replacedNode !== undefined && replacedNode.type !== "literal")
+					{
                         testDoc.args.push(replacedNode);
                     }
                     var scratchArea = document.getElementById("scratch_area");
@@ -417,20 +502,24 @@
             }
         }
 
-        function dragAwayNode(node) {
+        function dragAwayNode(node)
+		{
             if (node.parent === undefined)
                 return;
 
             var draggedArgIdx = getParentArgIndex(node);
-            if (node.parent === testDoc) {
+            if (node.parent === testDoc)
+			{
                 node.parent.args.splice(draggedArgIdx, 1);
             }
-            else {
+            else
+			{
                 node.parent.args[draggedArgIdx] = createLiteralNode(0);
             }
         }
 
-        function isAncestorOfNode(ancestor, node) {
+        function isAncestorOfNode(ancestor, node)
+		{
             do if (ancestor === node)
                 return true;
             while ((node = node.parent) !== undefined);
@@ -438,24 +527,28 @@
             return false;
         }
 
-        function createLiteralNode(value) {
+        function createLiteralNode(value)
+		{
             return {
                 type: "literal",
                 literal: value
             };
         }
 
-        function getParentArgIndex(targetNode) {
+        function getParentArgIndex(targetNode)
+		{
             if (!targetNode.parent) return undefined;
             var index = targetNode.parent.args.indexOf(targetNode);
             return index === -1 ? undefined : index;
         }
 
-        function allowDrop(ev) {
+        function allowDrop(ev)
+		{
             ev.preventDefault();
         }
 
-        function deleteDrop(ev) {
+        function deleteDrop(ev)
+		{
             var draggingNode = g_draggingElement.scratchNode;
             dragAwayNode(draggingNode);
 
@@ -463,7 +556,8 @@
             displayWholePage(testDoc, scratchArea); // redisplay
         }
 
-        function onclick_Run() {
+        function onclick_Run()
+		{
             var compiled = compile(
                 {
                     globalVariables: [],
@@ -476,6 +570,14 @@
             );
             runProgram(compiled);
         }
+		
+		function onclick_AddVariable()
+		{
+			localscope.push({name:"var"+localscope.length, type:"int", value:0});
+			
+			var dataArea = document.getElementById("data_area");
+			displayData(localscope, dataArea);
+		}
 
     </script>
     <style>
@@ -491,6 +593,12 @@
             width: 600px;
             padding: 5px;
             float: left;
+        }
+
+		#data_area {
+            height: 600px;
+            display: table-cell;
+            background-color: #FFAAAA;
         }
 
         .tableId {
@@ -537,6 +645,15 @@
             border: dotted;
         }
 
+		.scopeEntry {
+            background-color: #FFAAAA;
+            padding-top: 1px;
+            padding-bottom: 1px;
+            padding-left: 4px;
+            padding-right: 4px;
+            cursor: pointer;
+        }
+
         .nativeNode {
             border: outset;
             border-color: #FFCC66;
@@ -554,6 +671,19 @@
 			border:outset;
 			border-color:#66CCFF;
 			background-color:#00A5FF;
+			border-radius:6px;
+			padding-top:1px;
+			padding-bottom:1px;
+			padding-left:4px;
+			padding-right:4px;
+			cursor:pointer;
+			display:inline-block;
+		}
+
+		.scopeNode{
+			border:outset;
+			border-color:#FF6666;
+			background-color:#FF5500;
 			border-radius:6px;
 			padding-top:1px;
 			padding-bottom:1px;
@@ -600,6 +730,10 @@
             </td>
             <td style="vertical-align:top;">
                 <div id="scratch_area"></div>
+            </td>
+            <td style="vertical-align:top;">
+                <button onclick="onclick_AddVariable()">Add Variable</button>
+                <div id="data_area"></div>
             </td>
         </tr>
     </table>
